# counterpoint-engine-rs

./: AGENT.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: exceptions.rs  generator.rs  interval.rs  laman.rs  lib.rs  rules.rs  tensor_output.rs  voice_leading.rs
src/harmony/: analyzer.rs  cycle_checker.rs  mod.rs  tonal_graph.rs
